--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "tailwindcss": "^4.1.11"
   },
   "overrides": {
-    "jsonpath": "^1.1.1",
     "ajv": "^8.12.0",
-    "ajv-keywords": "^5.0.0",
-    "nth-check": "^2.0.1"
+    "ajv-keywords": "^5.1.0",
+    "fork-ts-checker-webpack-plugin": {
+      "ajv": "^8.12.0",
+      "ajv-keywords": "^5.1.0"
+    }
   }
 }
