--- a/.github/workflows/frontend-deploye.yml
+++ b/.github/workflows/frontend-deploye.yml
@@ -38,14 +38,9 @@ jobs:
     # 4. Install Dependencies & Build
     - name: Install Dependencies & Build
       run: |
+        npm install ajv@8.12.0 ajv-keywords@5.1.0 --save-exact
         npm install --legacy-peer-deps
-        export DISABLE_NEW_JSX_TRANSFORM=true
-        export TSC_COMPILE_ON_ERROR=true
-        export ESCAPE_HATCH=true
         CI=false npm run build
-      env:
-        DISABLE_ESLINT_PLUGIN: true
-        GENERATE_SOURCEMAP: false
 
     # 5. Configure AWS Credentials
     - name: Configure AWS Credentials
