--- a/package.json
+++ b/package.json
@@ -50,5 +50,17 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11"
+  },
+  "overrides": {
+    "ajv": "8.12.0",
+    "ajv-keywords": "5.1.0",
+    "terser-webpack-plugin": {
+      "ajv": "8.12.0",
+      "ajv-keywords": "5.1.0"
+    },
+    "schema-utils": {
+      "ajv": "8.12.0",
+      "ajv-keywords": "5.1.0"
+    }
   }
 }
