--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "proxy": "http://localhost:1010"
+    "eject": "react-scripts eject"
   },
+  
+  "proxy": "http://localhost:1010",
   "eslintConfig": {
     "extends": [
       "react-app",
